[gd_scene load_steps=2 format=3 uid="uid://dck2b7yvtdk28"]

[ext_resource type="Script" path="res://script/UI/options_menu.gd" id="1_ggsr5"]

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ggsr5")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DisplayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../BackButton")
text = "Display"

[node name="ControlButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../DisplayButton")
text = "Back"

[connection signal="pressed" from="VBoxContainer/DisplayButton" to="." method="_on_display_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ControlButton" to="." method="_on_control_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
